<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_translation">About Translate</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_setting">Settings</string>
    <string name="afternoon">PM</string>
    <string name="ai_btn">AI Translate</string>
    <string name="ai_cloud_download_desc">To use this feature, you need to download an algorithm plugin. While it is being downloaded, you can continue using other features.</string>
    <string name="ai_cloud_download_title">Install algorithm plugin</string>
    <string name="ai_cloud_downloading_tips">Downloading algorithm plugin… Try again later.</string>
    <string name="air_phone_connect_tips">Headphones connected. Translation results can be played via them.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_content">Communication across languages</string>
    <string name="app_name">Voice Translate</string>
    <string name="app_name_new">Translate</string>
    <string name="app_version">Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="april">April</string>
    <string name="arabic_os15">Arabic</string>
    <string name="audio_permission_dialog_title">Turn on the Microphone permission</string>
    <string name="august">August</string>
    <string name="auto_play_close_tips">Autoplay off</string>
    <string name="auto_play_start_tips">Autoplay on</string>
    <string name="basic_function">basic features</string>
    <string name="bengali_os15">Bengali</string>
    <string name="boot_wizard_disable_message_v2">\"%1$s\" has been disabled. Enable it to view the Privacy Notice.</string>
    <string name="bottom_recommended_header_title">寻找其他设置项？</string>
    <string name="bottom_sheet_behavior">com.coui.appcompat.panel.COUIBottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="broadcast_timbre">Voice</string>
    <string name="broadcast_timbre_tip">The selected voice only supports Chinese and English.</string>
    <string name="broadcast_timbre_tip_new">The selected voice only supports text in Simplified Chinese and English.</string>
    <string name="button_retry">Try again</string>
    <string name="byteShort"> B</string>
    <string name="byteSpeed"> B/s</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cambodian_km_os15">Khmer</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_content_tip">"By tapping \"Withdraw and exit\", you will be unable to use this app to translate text, conversations, or photos and we will stop collecting and using any personal information necessary to provide the functions. Withdrawal of consent will not affect the validity of any personal information processing based on consent before its withdrawal. You can revoke your permissions for this app in Permission manager.
For details, refer to the %1$s."</string>
    <string name="caption_translation">Live captions</string>
    <string name="caption_translation_content_new">Attend meetings and watch videos with real-time bilingual captions.</string>
    <string name="caption_translation_guide_context">Try live bilingual captions for videos and online meetings to follow along effortlessly.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="characters">Text</string>
    <string name="chinese">Chinese</string>
    <string name="chinese_traditional">Traditional Chinese</string>
    <string name="clear">Clear</string>
    <string name="clear_histories">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_mic_to_speak">Tap the mic to start speaking</string>
    <string name="click_or_long_press_to_speak">Tap or hold to talk</string>
    <string name="click_to_continue">Tap to continue</string>
    <string name="click_to_pause">Tap to pause</string>
    <string name="click_to_speak">Tap to speak</string>
    <string name="click_to_start">Tap to start</string>
    <string name="click_to_stop_speak">Tap to end</string>
    <string name="clipboard_permission_dialog_title">Clipboard access required</string>
    <string name="collect_personal_info_title">Personal Information We Collect</string>
    <string name="collect_personal_info_titles">Personal Information We Collect</string>
    <string name="collection_info_tip">"\"Access count\" and \"Personal information to be collected\" don't contain data that was generated today."</string>
    <string name="collection_situation">Access count</string>
    <string name="come_into_use">Get started</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="completely_select_all">All selected</string>
    <string name="continuously_receiving">Listening…</string>
    <string name="convert_generate_content">Generated by %s. For reference only.</string>
    <string name="convert_generate_next">Generated by NEXT AI. For reference only.</string>
    <string name="convert_generate_oppo">Generated by OPPO AI. For reference only.</string>
    <string name="convert_key_next">NEXT AI</string>
    <string name="convert_key_oppo">OPPO AI</string>
    <string name="copy">Copy</string>
    <string name="copy_talk">Copy</string>
    <string name="copy_text">Source and translation copied</string>
    <string name="coui_accessibility_checked">Selected</string>
    <string name="coui_accessibility_partchecked">Partially selected</string>
    <string name="coui_accessibility_select">Select</string>
    <string name="coui_accessibility_select_all">Select all</string>
    <string name="coui_accessibility_switch">Switch</string>
    <string name="dialog_translation">Conversation</string>
    <string name="document_translation">Document</string>
    <string name="download_offline_package_title">Download offline packs</string>
    <string name="english">English</string>
    <string name="language_select">Select language</string>
    <string name="language_source">Source</string>
    <string name="language_target">Target</string>
    <string name="photo_translation">Camera</string>
    <string name="play_sound_talk">Speak</string>
    <string name="return_value">Back</string>
    <string name="screen_function_name">Partial</string>
    <string name="screen_function_name_exit">Turn off</string>
    <string name="screen_function_name_full">Fullscreen</string>
    <string name="screen_translation">Screen</string>
    <string name="screen_translation_content_new">Browse pages in your native language as screen content is translated in real time.</string>
    <string name="screen_translation_name">Screen translate</string>
    <string name="share_record">Share recording</string>
    <string name="share_text">Share text</string>
    <string name="simplified_chinese">Simplified Chinese</string>
    <string name="simultaneous">Live</string>
    <string name="simultaneous_history">History</string>
    <string name="simultaneous_main_double_language2">Show original and translation</string>
    <string name="simultaneous_main_translation_language2">Only show translation</string>
    <string name="source_language">Source language</string>
    <string name="swap_language">Switch language</string>
    <string name="target_language">Target language</string>
    <string name="translate_unified_auto_detect_v2">Auto</string>
    <string name="tts_auto_play">Autoplay</string>
</resources>