<?xml version="1.0" encoding="utf-8"?>
<view android:layout_width="match_parent" android:layout_height="wrap_content" class="com.coloros.translate.screen.widget.ScreenTranslationToolCapsule$RealView"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/backgroundView" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/mainContainer" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="14.0sp" android:textColor="#ffffff" android:gravity="center" android:orientation="horizontal" android:id="@id/fullScreenContainer" android:background="@drawable/tool_capsule_full_bg" android:layout_width="0.0dp" android:layout_height="40.0dp" android:text="@string/screen_function_name_full" android:contentDescription="@string/screen_function_name_full" android:layout_marginStart="8.0dp" android:paddingHorizontal="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="@id/backLt" app:layout_constraintEnd_toStartOf="@id/zoneAreaScreenContainer" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/backLt" app:layout_constraintTop_toTopOf="@id/backLt" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffff" android:gravity="center" android:orientation="horizontal" android:id="@id/zoneAreaScreenContainer" android:background="@drawable/tool_capsule_full_bg" android:layout_width="0.0dp" android:layout_height="40.0dp" android:text="@string/screen_function_name" android:contentDescription="@string/screen_function_name" android:layout_marginHorizontal="8.0dp" android:paddingHorizontal="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="@id/fullScreenContainer" app:layout_constraintEnd_toStartOf="@id/closeLt" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/fullScreenContainer" app:layout_constraintTop_toTopOf="@id/fullScreenContainer" />
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/languageContainer" android:visibility="gone" android:layout_width="0.0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/backLt" app:layout_constraintEnd_toStartOf="@id/closeLt" app:layout_constraintHorizontal_weight="1.0" app:layout_constraintStart_toEndOf="@id/backLt">
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/languageContainer_sub" android:layout_width="0.0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
                <TextView android:textSize="14.0sp" android:textColor="#ffffff" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/originLanguageTv" android:layout_width="wrap_content" android:layout_height="40.0dp" android:maxWidth="@dimen/dp_100" android:text="@string/translate_unified_auto_detect_v2" android:singleLine="true" android:contentDescription="@string/language_source" android:layout_marginHorizontal="10.0dp" />
                <ImageView android:layout_gravity="center_vertical" android:id="@id/switchLanguageIv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tool_capsule_language_right" android:contentDescription="@string/language_select" />
                <TextView android:textSize="14.0sp" android:textColor="#ffffff" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/targetLanguageTv" android:layout_width="wrap_content" android:layout_height="40.0dp" android:maxWidth="@dimen/dp_100" android:text="@string/simplified_chinese" android:singleLine="true" android:contentDescription="@string/language_target" android:layout_marginHorizontal="10.0dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout android:id="@id/backLt" android:background="@drawable/tool_capsule_full_bg" android:layout_width="40.0dp" android:layout_height="40.0dp" android:contentDescription="@string/return_value" android:layout_marginStart="12.0dp" android:layout_marginVertical="12.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <ImageView android:id="@id/backIv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tool_capsule_back" android:layout_centerInParent="true" android:contentDescription="@string/return_value" android:rotation="0.0" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/closeLt" android:background="@drawable/tool_capsule_full_bg" android:layout_width="40.0dp" android:layout_height="40.0dp" android:contentDescription="@string/screen_function_name_exit" android:layout_marginEnd="12.0dp" app:layout_constraintBottom_toBottomOf="@id/backLt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/backLt">
            <ImageView android:id="@id/closeIv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tool_capsule_exit" android:layout_centerInParent="true" android:contentDescription="@string/screen_function_name_exit" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView android:id="@id/shrinkIv" android:visibility="gone" android:layout_width="@dimen/translation_tool_capsule_shrink_width" android:layout_height="@dimen/translation_tool_capsule_shrink_width" android:src="@drawable/tool_capsule_shrink" android:scaleType="center" android:contentDescription="@string/screen_translation_name" android:alpha="0.0" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</view>
