<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_mainpage_choose_language" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/dp_12" android:forceDarkAllowed="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?couiColorLabelPrimary" android:textSize="@dimen/sp_12" android:textColor="@drawable/text_color_selector" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/language_ori" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/chinese" android:lines="1" android:textFontWeight="500" />
    <ImageView android:layout_gravity="center" android:id="@id/switchButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/selector_switch_language" android:contentDescription="@string/swap_language" />
    <TextView android:textAppearance="?couiColorLabelPrimary" android:textSize="@dimen/sp_12" android:textColor="@drawable/text_color_selector" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/language_result" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/english" android:lines="1" android:textFontWeight="500" />
</LinearLayout>
