<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:forceDarkAllowed="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/toolbar_title_text_color" android:gravity="center_vertical" android:id="@id/translation_1" android:background="@drawable/main_bg_photo" android:layout_width="0.0dp" android:layout_height="@dimen/dp_72" android:text="@string/photo_translation" android:drawablePadding="@dimen/dp_8" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_14" app:drawableStartCompat="@drawable/icon_photo_translation" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/toolbar_title_text_color" android:gravity="center_vertical" android:id="@id/translation_2" android:background="@drawable/main_bg_photo" android:layout_width="0.0dp" android:layout_height="@dimen/dp_72" android:text="@string/dialog_translation" android:drawablePadding="@dimen/dp_8" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_14" app:drawableStartCompat="@drawable/icon_dialog_translation" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/toolbar_title_text_color" android:gravity="center_vertical" android:id="@id/translation_3" android:background="@drawable/main_bg_photo" android:layout_width="0.0dp" android:layout_height="@dimen/dp_72" android:text="@string/simultaneous" android:drawablePadding="@dimen/dp_8" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_14" app:drawableStartCompat="@drawable/icon_simultaneous" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/toolbar_title_text_color" android:gravity="center_vertical" android:id="@id/translation_4" android:background="@drawable/main_bg_photo" android:layout_width="0.0dp" android:layout_height="@dimen/dp_72" android:text="@string/document_translation" android:drawablePadding="@dimen/dp_8" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_14" app:drawableStartCompat="@drawable/icon_document" />
    <androidx.constraintlayout.helper.widget.Flow android:id="@id/entrance_flow" android:layout_width="match_parent" android:layout_height="wrap_content" app:constraint_referenced_ids="translation_1,translation_2,translation_3,translation_4" app:flow_horizontalGap="@dimen/dp_8" app:flow_maxElementsWrap="2" app:flow_verticalGap="@dimen/dp_8" app:flow_wrapMode="chain" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
