<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="?couiColorSurfaceWithCard" android:layout_width="match_parent" android:layout_height="match_parent" android:forceDarkAllowed="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="32.0dp" android:layout_marginTop="10.0dp" android:paddingHorizontal="16.0dp">
        <TextView android:textAppearance="?couiTextAppearanceButtonL" android:textColor="?couiColorPrimaryTextOnPopup" android:id="@id/panelCancelBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_cancel" android:contentDescription="@string/action_cancel" android:layout_marginEnd="@dimen/dp_10" />
        <TextView android:textAppearance="?couiTextAppearanceHeadline5" android:textColor="?couiColorPrimaryNeutral" android:ellipsize="end" android:gravity="center" android:id="@id/title" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/language_select" android:lines="2" android:layout_weight="1.0" />
        <TextView android:textAppearance="?couiTextAppearanceButtonL" android:textColor="?couiColorPrimaryTextOnPopup" android:id="@id/panelEnsureBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_done" android:contentDescription="@string/action_done" android:layout_marginStart="@dimen/dp_10" />
    </LinearLayout>
    <RelativeLayout android:background="@drawable/setting_card_bg" android:layout_width="match_parent" android:layout_height="215.0dp" android:layout_marginTop="22.0dp" android:paddingStart="16.0dp" android:paddingEnd="16.0dp" android:layout_marginHorizontal="24.0dp">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/lltitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dp">
            <TextView android:textAppearance="?couiTextAppearanceDescription" android:textColor="?couiColorSecondNeutral" android:gravity="center" android:id="@id/source_language_title" android:layout_width="0.0dp" android:layout_height="wrap_content" android:minHeight="23.0dp" android:text="@string/source_language" android:layout_weight="1.0" android:lineSpacingExtra="-2.0sp" android:layout_alignParentStart="true" />
            <ImageView android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/change_voice" android:layout_marginStart="@dimen/dp_18" android:layout_marginEnd="@dimen/dp_18" />
            <TextView android:textAppearance="?couiTextAppearanceDescription" android:textColor="?couiColorSecondNeutral" android:gravity="center" android:id="@id/target_language_title" android:layout_width="0.0dp" android:layout_height="wrap_content" android:minHeight="23.0dp" android:text="@string/target_language" android:layout_weight="1.0" android:lineSpacingExtra="-2.0sp" android:layout_alignParentEnd="true" />
        </LinearLayout>
        <RelativeLayout android:id="@id/chooseLanguage" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/lltitle" android:layout_marginVertical="8.0dp">
            <com.coui.appcompat.picker.COUINumberPicker android:id="@id/sourcelanguage" android:layout_width="wrap_content" android:layout_height="152.0dp" android:layout_marginEnd="24.0dp" android:layout_toStartOf="@id/space" android:layout_alignParentStart="true" android:layout_marginVertical="3.5dp" app:couiFocusTextColor="?couiColorPrimaryNeutral" app:couiPickerRowNumber="3" app:endTextSize="16.0sp" app:focusTextSize="18.0sp" app:startTextSize="16.0sp" />
            <Space android:id="@id/space" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
            <com.coui.appcompat.picker.COUINumberPicker android:id="@id/language_picker" android:layout_width="wrap_content" android:layout_height="152.0dp" android:layout_marginStart="24.0dp" android:layout_toEndOf="@id/space" android:layout_alignParentEnd="true" android:layout_marginVertical="3.5dp" app:couiFocusTextColor="?couiColorPrimaryNeutral" app:couiPickerRowNumber="3" app:endTextSize="16.0sp" app:focusTextSize="18.0sp" app:startTextSize="16.0sp" />
            <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" app:cardBackgroundColor="@color/coui_stroke_button_fill_color" app:cardElevation="0.0dp">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <View android:background="@color/coui_color_divider" android:layout_width="match_parent" android:layout_height="0.33000004dp" />
                    <ImageView android:layout_gravity="center" android:id="@id/switchButton" android:layout_width="wrap_content" android:layout_height="49.339996dp" android:src="@drawable/change_voice" android:contentDescription="@string/swap_language" />
                    <View android:background="@color/coui_color_divider" android:layout_width="match_parent" android:layout_height="0.33000004dp" android:layout_marginTop="5.0dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>
    <TextView android:textAppearance="?couiTextAppearanceHeadline6" android:textColor="?couiColorPrimaryNeutral" android:gravity="center_vertical" android:id="@id/download" android:background="@drawable/setting_card_bg" android:layout_width="match_parent" android:layout_height="52.0dp" android:layout_marginTop="16.0dp" android:layout_marginBottom="48.0dp" android:text="@string/download_offline_package_title" android:drawableEnd="@drawable/arrow_setting" android:layout_marginHorizontal="24.0dp" android:paddingHorizontal="16.0dp" android:paddingVertical="15.0dp" />
</LinearLayout>
