<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:forceDarkAllowed="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/translation_1" android:background="@drawable/main_bg_photo" android:layout_width="0.0dp" android:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="@id/translation_3" app:layout_constraintEnd_toStartOf="@id/translation_2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/translation_2">
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/toolbar_title_text_color" android:gravity="center" android:id="@id/translation_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo_translation" android:drawablePadding="@dimen/dp_8" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_16" app:drawableTopCompat="@drawable/icon_photo_translation_40" />
    </LinearLayout>
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/toolbar_title_text_color" android:gravity="center_vertical" android:id="@id/translation_2" android:background="@drawable/main_bg_photo" android:layout_width="0.0dp" android:layout_height="@dimen/dp_72" android:text="@string/dialog_translation" android:drawablePadding="@dimen/dp_8" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_14" android:layout_marginStart="@dimen/dp_8" app:drawableStartCompat="@drawable/icon_dialog_translation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/translation_1" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/toolbar_title_text_color" android:gravity="center_vertical" android:id="@id/translation_3" android:background="@drawable/main_bg_photo" android:layout_width="0.0dp" android:layout_height="@dimen/dp_72" android:layout_marginTop="@dimen/dp_8" android:text="@string/simultaneous" android:drawablePadding="@dimen/dp_8" android:fontFamily="sans-serif-medium" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_14" android:layout_marginStart="@dimen/dp_8" app:drawableStartCompat="@drawable/icon_simultaneous" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/translation_1" app:layout_constraintTop_toBottomOf="@id/translation_2" />
</androidx.constraintlayout.widget.ConstraintLayout>
